2011-11-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2io.cc (jtag2::doJtagCommand): Be more liberal in
	retrying failed commands (memory and PC read).
	* src/jtag2rw.cc (jtag2::jtagRead): (Ditto.)
	* src/jtag2run.cc (jtag2::getProgramCounter): (Ditto.)

2011-11-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Moved from CVS to SVN on sourceforge.net.

2011-08-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Feature Requests #3289022: Allow for the same device designations
	as avrdude
	* doc/avrdude.1 (-P): Document that AVaRICE normally autodetects
	the target device, and -P acts as an override only.

2011-08-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version for post-release 2.11.

2011-08-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version for release 2.11.

2011-08-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Patch #2842235: Fix segfault when programming with .fuses section
	* src/jtagprog.cc (get_section_addr): Return 0xffffffff for unknown
	section memory types, so sections like .fuses will be silently
	ignored.
	* src/jtag2prog.cc (get_section_addr): (Ditto.)

2011-08-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Andrew Zabolotny:
	Patch #2995091: Fix gcc 4.4.1 warnings
	Actually, I went a lot further, and made it completely -Wall -Wextra
	clean for GCC 4.x.  (GCC 3.x users might want to use --disable-warnings
	in configure.)
	* configure.ac: Add --enable-warnings option.
	* src/pragma.h: New file, #pragma abstraction
	* src/jtag.h: Include "pragma.h" so it's universally usable
	* src/Makefile.am (avarice_SOURCES): Add pragma.h.
	* src/devdescr.cc: Silence compiler warnings.
	* src/gnu_getopt.c: (Ditto.)
	* src/jtag2.h: (Ditto.)
	* src/jtag2bp.cc: (Ditto.)
	* src/jtag2io.cc: (Ditto.)
	* src/jtag2prog.cc: (Ditto.)
	* src/jtag2run.cc: (Ditto.)
	* src/jtag2usb.cc: (Ditto.)
	* src/jtagbp.cc: (Ditto.)
	* src/jtaggeneric.cc: (Ditto.)
	* src/jtagio.cc: (Ditto.)
	* src/jtagprog.cc: (Ditto.)